--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <table>
+        <tr>
+            <th>Contact</th>
+            <th>Name</th>
+        </tr>
+
+        <tr>
+            <td>9523645</td>
+            <td>angad</td>
+        </tr>
+    </table>
 </body>
 </html>
